feat: upgraded dependencies + java17